# team-moj-a

./: LICENSE  README.md  UserStories.md  package-lock.json
.kiro/specs/casework-decision-support/: .config.kiro  requirements.md
ai_summary/: ai_summary.py  dashboard.py  data_preprocessing.py  main.py  pyproject.toml
app/: config.json  filters.js  routes.js
app/data/: cases.json  correspondence-templates.json  decision-templates.json  policies.json  precedents.json  quality-checklists.json  workflows.json
app/views/: index.html
app/views/v1/: case-not-found.html  case.html  correspondence-compose.html  correspondence-preview.html  correspondence-sent.html  correspondence.html  dashboard.html  decision-confirmed.html  decision-preview.html  decision.html  precedent.html  quality-review.html  similar-cases.html  team.html
data/: ai_notes.json  cases.json  enriched_cases.json  policy-extracts.json  workflow-states.json
