[project]
name = "team-moj-a"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "en-core-web-sm",
    "laurium>=0.5.0",
    "pandas>=3.0.2",
    "streamlit>=1.56.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }
